Dbcontext e connstring aggiunte :)

--- a/EsercitazioneControlloAccessi/EsercitazioneControlloAccessi.csproj
+++ b/EsercitazioneControlloAccessi/EsercitazioneControlloAccessi.csproj
@@ -7,12 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DATA\**" />
+    <Content Remove="DATA\**" />
+    <EmbeddedResource Remove="DATA\**" />
+    <None Remove="DATA\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="DATA\" />
     <Folder Include="DTO\" />
   </ItemGroup>
 
