--- a/EsercitazioneControlloAccessi/appsettings.Development.json
+++ b/EsercitazioneControlloAccessi/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=ControlloAccessiDbContext;Integrated Security=SSPI;TrustServerCertificate=True"
   }
 }
